# v3.0:
  * Remove daemon support.
  * Remove `-D` `-K` `-l` `-t` `-T` option.
  * Remove `-d` option.
  * Add long args support.
  * Add `-N` option: Do not use .rurienv file.
  * General bug fixes.
# v2.7:
  * Catch segfault.
  * Fix default mountpoint.
  * Fix path_is_absolute(p) failed.
  * Remove ASAN in Makefile.
  * General bug fixes.
# v2.6:
  * Fix uid_map and gid_map for `-r` option.
  * Auto detect mountpoint type for `-m` option.
  * Remove manpage && update README.md.
  * General bug fixes.
# v2.5-hotfix2:
  * Fix default caplist caused `could not change the root directory` and `Failed to check chroot()`
# v2.5:
  * Add binfmt_misc support.
  * Add `-a` option: Simulate architecture via binfmt_misc & QEMU.
  * Add `-q` option: Specify the path of QEMU.
  * Add `-S` option: Bind-mount /dev/, /sys/ and /proc/ from host.
  * General bug fixes.
# v2.4:
  * Add `-r` option: run rootless container.
  * Add an easter egg: `ruri AwA`.
  * Rewrite Makefile, you can `make -j$(nproc)` now.
  * General bug fixes.
# v2.3:
  * `-hh` => `-H`.
  * Add `-T` option.
  * Change src structure.
  * Rewrite most of the code.
  * General bug fixes.
# v2.2:
  * Add new security options of Clang/GCC.
  * Disable no_new_privs bit by default for seccomp.
  * Disallow raising ambient capabilities via the prctl(2) PR_CAP_AMBIENT_RAISE operation.
  * Protect /sys/block by mounting a tmpfs on it.
  * Close other fds before exec(), (maybe useless).
  * Make dev log colorful.
  * General bug fixes.
# v2.1:
  * Fix seccomp rule.
  * Change src structure.
  * Add new security options of Clang/GCC.
  * General bug fixes.
# v2.0:
  * Fix compile error (Thanks @dabao1955 for reporting).
# v2.0 rc2:
  * Fix umount() can't work.
  * (I think) Fix seccomp rule.
# v2.0 rc1:
  * Remove ruri.sock after running `ruri -k`.
  * Tidy all the code/files.
  * General bug fixes.
# v2.0 beta4:
  * Drop CAP_SYS_CHROOT and CAP_MKNOD by default
  * General bug fixes.
# v2.0 beta3: